<resources>
    <string name="app_name">MemoryGame</string>
    <string name="menu_title">Memory Game</string>
    <string name="menu_new_game">New Game</string>
    <string name="menu_create_game">Create your game </string>
    <string name="menu_download_game">Download game</string>
    <string name="menu_options">Options</string>
    <string name="menu_about">About</string>
    <string name="options_language">Language</string>
    <string name="options_song">Song</string>
    <string name="options_layout">Card Layout:</string>
    <string name="save">Save</string>
    <string name="choose_difficulty">Choose the difficulty</string>
    <string name="creation_dialog">Create your own memory board</string>
    <string name="negative_button">Cancel</string>
    <string name="positive_button">Ok</string>
    <string name="download_title">About</string>
    <string name="download_custom_game">Download your Custom Game</string>
    <string name="game_name">Game name (example: \'panda_fun\')</string>
    <string name="alert_dialog_exit">Quit your current game?</string>
    <string name="toast_main_menu">Already in the main menu</string>
    <string name="snack_bar_file_missing">Sorry, we couldn\'t find any such game </string>
    <string name="snack_bar_custom_game">You\'re now playing </string>
    <string name="number_pairs">Pairs: </string>
    <string name="number_moves">Moves: </string>
    <string name="number_moves_easy">Easy: 4 x 2</string>
    <string name="number_moves_medium">Medium: 6 x 3</string>
    <string name="number_moves_hard">Hard: 6 x 4</string>
    <string name="number_pairs_easy">Pairs: 0 / 4</string>
    <string name="number_pairs_medium">Medium: 0 / 9</string>
    <string name="number_pairs_hard">Hard: 0 / 12</string>
    <string name="snack_bar_already_won">You already won!</string>
    <string name="snack_bar_win">You won! Congratulations.</string>
    <string name="snack_invalid_move">Invalid move!</string>
    <string name="toast_access_photos">In order to create a custom game, you need to provide access to your photos</string>
    <string name="choose_pics">Choose pics </string>
    <string name="upload_complete">Upload complete! Let\'s play your game </string>
    <string name="error_memory_game">Encountered error while saving memory game</string>
    <string name="game_exists">A game already exists with the name </string>
    <string name="name_taken">Name taken</string>
    <string name="failed_upload_image">Failed to upload image</string>
    <string name="choose_another">Please choose another</string>
    <string name="failed_game_creation">Failed game creation</string>
    <string name="enter_game_name">Enter game name</string>
    <string name="server_off">Sorry, the server is off. Try again later</string>
</resources>